project upgrade - upgrade to spring-boot 3.0.2; - small code update; - upgrade to elastic.co docker images 8.5.3; - upgrade to prometheus docker image v2.42.0; - upgrade to grafana docker image 9.3.6; - upgrade to  mysql docker image 8.0.32.